--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.488.0",
-    "next": "15.3.0",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
@@ -28,6 +28,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
