--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "framer-motion": "^12.7.3",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "highlight.js": "^11.11.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.488.0",
@@ -53,6 +54,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-icons": "^5.5.0",
+    "rehype-parse": "^9.0.1",
+    "rehype-react": "^8.0.0",
+    "shiki": "^3.3.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
