--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cardano-sdk/dapp-connector": "^0.13.11",
     "@codemirror/lang-html": "^6.4.9",
+    "@emurgo/cardano-serialization-lib-browser": "^14.1.1",
     "@ibm/plex": "^6.4.1",
     "@lezer/highlight": "^1.2.1",
     "@radix-ui/react-accordion": "^1.2.7",
@@ -39,12 +41,16 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "arweave": "^1.15.7",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
+    "form-data": "^4.0.2",
     "framer-motion": "^12.7.3",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "highlight.js": "^11.11.1",
+    "js-sha256": "^0.11.0",
     "ldrs": "^1.1.7",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.488.0",
@@ -54,6 +60,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "rehype-parse": "^9.0.1",
     "rehype-react": "^8.0.0",
