--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "form-data": "^4.0.2",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.7.3",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "highlight.js": "^11.11.1",
